--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "SANA-Radio",
-	"version": "0.1",
+	"version": "0.1.0",
 	"description": "SANA Radio - это радио основанное на предпочтениях каждого пользователя, использующего YouTube, SoundCloud, VK Music и Spotify",
 	"main": "main.js",
 	"dependencies": {
@@ -19,13 +19,13 @@
         "ship:linuxAll": "electron-builder -l --armv7l --arm64 -p always"
     },
     "keywords": [
-		'SANA',
-		'SANA Radio',
-		'YouTube Radio',
-		'Soundcloud Radio',
-		'VK Music Radio',
-		'Spotify Radio',
-		'Radio'
+		"SANA",
+		"SANA Radio",
+		"YouTube Radio",
+		"Soundcloud Radio",
+		"VK Music Radio",
+		"Spotify Radio",
+		"Radio"
 	],
 	"repository": {
 		"type": "git",
