--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "SANA-Radio",
-    "version": "0.1.0",
+    "version": "0.1.1",
     "description": "SANA Radio - это радио основанное на предпочтениях каждого пользователя, использующего YouTube, SoundCloud, VK Music и Spotify",
     "main": "main.js",
     "dependencies": {},
@@ -14,7 +14,7 @@
         "dist": "electron-builder",
         "ship": "electron-builder -p always",
         "ship:win64": "electron-builder -w --x64 -p always",
-        "shit:win32": "electron-builder -w --i32 -p always",
+        "ship:win32": "electron-builder -w --ia32 -p always",
         "ship:linuxAll": "electron-builder -l --armv7l --arm64 -p always"
     },
     "keywords": [
